# copertinefull

./: .gitignore  .secrets  Makefile  README.md  SETUP.txt  copertine.nginx.conf  current_analysis.md  docker-compose.yml  refreshbind.sh
backend/: .env  .secrets.example  Dockerfile  docker-compose.yml  manifesto_archive.json  pyproject.toml  ruff.toml
backend/data/: dates_backfill_20251220_20260402.txt  datestofetch.txt
backend/experiments/: README_travasa.md  debug_directus.py  directusdefect.py  gendates.py  gpt_extract.py  kill_weaviate_warning_danger.py  missingdates.py  recent_articles.py  scrape2.py  scrape_date.py  search.py  travasa.py
backend/experiments/experiments/: kill_newer_bjects_in_copertine_warning_danger.py  kill_weaviate_warning_danger.py  killtodayobjects.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_auth_tables.py
backend/src/: __init__.py  cli.py  gpt_extract.py  import_to_pg.py  main.py  scrape.py  scrape2.py  scrape_date.py  scrapedirectus.py  sd2.py  search.py  setup_db.sql  test_auth_flow.ts  test_past_dates.py  test_scraper.py
backend/src/experiments/: kill_newer_bjects_in_copertine_warning_danger.py  pydantic2weaviateproperties.py  scrape2.py
backend/src/includes/: auth.py  database.py  models.py  mytypes.py  prompts.py  schemas.py  utils.py  weschema.py
backend/src/includes/email_templates/: password_reset.html  verification.html
backend/src/middleware/: auth.py
backend/src/routes/: auth.py  copertine.py
backend/tests/: test_auth_flow.py  test_past_dates.py  test_scraper.py
docs/: article_content.md  psql_info.txt
docs/superpowers/plans/: 2026-04-02-simplification-plan-mema3.md  2026-04-02-simplification-plan.md
docs/superpowers/specs/: 2026-04-02-simplification-design-mema3.md  2026-04-02-simplification-design.md
frontend/: .env.example  .gitignore  Dockerfile  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/auth/: layout.tsx
frontend/app/components/: PaginationControls.tsx
frontend/app/constants/: index.ts
frontend/app/context/: auth-context.tsx
frontend/app/copertine/: layout.tsx  loading.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: useAuth.ts  useTheme.ts
frontend/app/lib/: cache.ts  constants.ts  db.ts  weaviate.ts
frontend/providers/: theme-provider.tsx
(+39 files in other folders)
