[project]
name = "copertine3"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Alexander", email = "gogonegro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.59.3",
    "together>=1.3.11",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "weaviate-client>=4.10.2",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.14.1",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]

[tool.uv]
package = false
