[project]
name = "copertine3"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Alexander", email = "gogonegro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.3",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.14.1",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]

[tool.uv]
package = false
